--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,20 @@ body{
   margin: 0px;
   background-image: url('./media/beach.jpg');
   font-size: 18px;
+  font-family: 'Indie Flower', cursive;
+
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
 
-.title, .addDancerButton, .getRickRollin, .lineUp, .TrumpShaking, .KimShaking {
+.title, .addDancerButton, .getRickRollin, .lineUp, .TrumpShaking, .KimShaking, .interact {
   padding:5px 12px;
   float:right;
+}
+
+.fighter {
+  border-radius:50%;
 }
 
 .topbar: {
@@ -20,8 +26,8 @@ body, a:link, a:visited, a:active{
   height:200px;
 }
 
-.title{
-
+.title, .topbar{
+  background-color: black;
 }
 
 .dancer{
